Fix Skills + Disable RPG Durability